Change Log

vD4.5.1 20161214 SCL
- minor #ifdef code cleanup
- fix bug in service level menu when AUTOSVCLEVEL not defined
	
vD4.5.1 20161213 SCL
- fix broken watchdog when compiling with AVR 1.6.10+. optimizer was
	eliminating wdt_init(), so we add "used" attribute to it
- Adafruit_TMP007.cpp - fix 1.6.10+ compiler warning
- turn on RAPI_SEQUENCE_ID by default
- compile with AVR board support 1.6.10+ from now on to save 2K+ code space
	if using an older compiler and output is too big,
	disable RAPI_SEQUENCE_ID
	
20161212 SCL
- fix compile errors when GFI not defined
- fix compile errors when AUTH_LOCK && !RAPI
- protect some AMMETER code
	
vD4.5.0 20161209 SCL	
- added STATE_TRANSITION_REQ_FUNC #ifdef
- added AUTOSVCLEVEL #ifdef
- heavily revamped RAPI code
  - fix RAPI_I2C lock up issue
  - add RAPI sender & sequence id support
  when RAPI_SEQUENCE_ID is enabled, an optional sequence ID may be inserted
	into RAPI commands. The corresponding RAPI response will echo the
	sequence ID, making it possible to determine the origin of each
	RAPI response - makes it possible to detect RAPI commands that weren't
	received by the target

vD4.4.0 20161209 SCL	
- minor code cleanup. also fix some compile errors when certain features disabled
- added AUTH_LOCK code	
 charging access control for RFID readers, etc
 if AUTH_LOCK defined, enables RAPI G4/S4 commands
  to enable/disable charging function
 if AUTH_LOCK_REG/IDX are also defined, then a hardware pin is
  used to control access, rather than RAPI
	
vD4.3.3 20160714 SCL
- remove duplicate RAPI $SS command (use $SF instead)

vD4.3.2 20160623 SCL
- $SC returns current

20160620 SCL
- add optional N parameter to $SC

	
vD4.3.1 2016030 SCL
- merge PR#57 - only set backlight when needed on overtemp
- don't clear g_WattSeconds in Sleep()
	
vD4.3.0 2016030 SCL
- charge & time limit are no longer mutually exclusive. If user sets both, the
	first one that's met will terminate the charge