@@ -1,5 +1,8 @@
 Change Log
 
+20170118
+- get rid of superfluous loopcnt arg in ReadPilot()
+
 vD4.5.1 20161214 SCL
 - minor #ifdef code cleanup
 - fix bug in service level menu when AUTOSVCLEVEL not defined
